# it-depends

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  default.profraw  readme.md
.github/: code_of_conduct.md  contributing.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_test.yml  codeql-analysis.yml  package.yml
docs/: design.md
packaging/: CMakeLists.txt
packaging/linux/: .gitignore  CMakeLists.txt  itdepends-template.yml
packaging/macos/: CMakeLists.txt
packaging/windows/: CMakeLists.txt
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/data/builders/: CycloneDXMapperBuilder.cpp  CycloneDXMapperBuilder.hpp
src/data/contracts/: IBuilderFactory.hpp  IFileReader.hpp  IFileReaderFactory.hpp  IJsonMapper.hpp  IMapper.hpp  IMapperBuilder.hpp  IMapperFactory.hpp
src/data/exceptions/: EmptyFileException.hpp  FileNotFoundException.hpp  UnsupportedSBOMTypeException.hpp
src/data/factories/: BuilderFactory.cpp  BuilderFactory.hpp  CycloneDXMapperFactory.hpp  FileReaderFactory.cpp  FileReaderFactory.hpp  MapperFactory.cpp  MapperFactory.hpp
src/data/implementation/: FileReader.cpp  FileReader.hpp
src/data/mappers/: CycloneDXMapper.cpp  CycloneDXMapper.hpp
src/data/mappers/cyclonedx/: DependencyMapper.cpp  DependencyMapper.hpp  HashMapper.cpp  HashMapper.hpp  LicenseMapper.cpp  LicenseMapper.hpp  UrlMapper.cpp  UrlMapper.hpp  UrlTypeMapper.cpp  UrlTypeMapper.hpp
src/domain/: SbomType.hpp
src/domain/models/: Author.hpp  Dependency.hpp  Hash.hpp  License.hpp  Type.hpp  Url.hpp  UrlType.hpp
src/presentation/contracts/: IUiMapper.hpp
src/presentation/fragments/EmptyFragment/: EmptyFragment.ui  EmptyFragment.ui.autosave
src/presentation/mappers/: DependencyListItemUiMapper.cpp  DependencyListItemUiMapper.hpp  DependencyUiMapper.cpp  DependencyUiMapper.hpp  UrlUiMapper.cpp  UrlUiMapper.hpp
src/presentation/models/: DependencyListItemUiModel.hpp  DependencyUiModel.hpp  UrlUiModel.hpp
src/presentation/states/: EmptyState.hpp  ErrorState.hpp  LoadingState.hpp  MainWindowState.hpp  SuccessState.hpp
src/presentation/widgets/DependencyListWidget/: DependencyListWidget.cpp  DependencyListWidget.hpp  DependencyListWidget.ui
src/presentation/windows/: IMainWindow.hpp  IMainWindowViewModel.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MainWindowViewModel.cpp  MainWindowViewModel.hpp
tests/: CMakeLists.txt  temp_tst.cpp
tests/data/builders/: CycloneDXMapperBuilder_tests.cpp
tests/data/factories/: BuilderFactory_tests.cpp  FileReaderFactory_tests.cpp  MapperFactory_tests.cpp
tests/data/implementation/: FileReader_tests.cpp
tests/data/mappers/: CycloneDXMapper_tests.cpp
tests/data/mappers/cyclonedx/: DependencyMapper_tests.cpp  HashMapper_tests.cpp  LicenseMapper_tests.cpp  UrlMapper_tests.cpp  UrlTypeMapper_tests.cpp
tests/presentation/mappers/: DependencyUiMapper_tests.cpp  UrlUiMapper_tests.cpp
tests/presentation/windows/: MainWindowViewModel_tests.cpp
tests/res/: cyclonedx_sbom.json
